# nextgen-mcp

./: .env  .env.example  Dockerfile  README.md  dev.py  main.py  pyproject.toml  railway.json
.github/: CODEOWNERS
clients/: sse_client.py  stdio_client.py
scripts/: inspect.ps1  inspect.sh  restart.ps1  restart.sh
src/nextgen_mcp/: main.py
src/nextgen_mcp/middlewares/: auth.py  logging.py
src/nextgen_mcp/server/: config.py
src/nextgen_mcp/tools/: games.py  greetings.py  weather.py
